Bug 669158.  Don't try to unclamp the dummy timeout.  r=jst